--- a/resources/css/master.css
+++ b/resources/css/master.css
@@ -19,6 +19,8 @@ a, .btn {
 .container {
   margin-top: 20rem;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container img, .container .panel, .container button {
