--- a/resources/css/master.css
+++ b/resources/css/master.css
@@ -15,24 +15,27 @@ a, .btn {
   box-shadow: none;
 }
 
-
 .container {
-  margin-top: 20rem;
-  width: 100%;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
+}
+
+#logo.container {
+  margin-top: 20rem;
 }
 
 .container img, .container .panel, .container button {
   margin: 1rem .25rem;
 }
 
-.container .panel {
+#search-bar.container {
   width: 60rem;
   height: 5rem;
+  padding: 0;
 }
 
-.container .form-control {
+#search-bar input {
   height: 100%;
 }
 
